--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,4 +23,30 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
+}
+
+button {
+  cursor: pointer;
+}
+
+/* Scrollbar styling */
+::-webkit-scrollbar {
+  width: 4px; /* thinner scrollbar */
+  height: 4px; /* for horizontal scroll */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #9333ea; /* Tailwind purple-600 */
+  border-radius: 9999px; /* fully rounded */
+}
+
+::-webkit-scrollbar-track {
+  background: transparent; /* or use a light gray */
+}
+
+/* Firefox */
+* {
+  scrollbar-width: thin; /* thin scrollbar */
+  scrollbar-color: #9333ea transparent; /* thumb | track */
 }
